# vazi-ranker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  scoring.rs  types.rs
tests/: ranking_tests.rs
